# MoonZoon

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile.toml  README.md  default_makefile.toml  index.html  style.css
crates/blocks_macro/: Cargo.toml
crates/blocks_macro/src/: lib.rs
crates/cache_macro/: Cargo.toml
crates/cache_macro/src/: lib.rs
crates/color_macro/: Cargo.toml
crates/color_macro/src/: lib.rs
crates/futures_signals_ext/: Cargo.toml
crates/futures_signals_ext/src/: into_signal_option.rs  lib.rs  map_diff_ext.rs  mutable_b_tree_map_ext.rs  mutable_ext.rs  mutable_ext_option.rs  mutable_vec_ext.rs  read_only_mutable_ext.rs  read_only_mutable_ext_option.rs  signal_either.rs  signal_ext_bool.rs  signal_ext_ext.rs  signal_map_ext_ext.rs
crates/futures_util_ext/: Cargo.toml
crates/futures_util_ext/src/: lib.rs  stream_ext_ext.rs
crates/hsluv/: Cargo.toml
crates/hsluv/src/: lib.rs
crates/moon/: Cargo.toml
crates/moon/actor/: connected_clients.rs
crates/moon/css/: basic.css  modern-normalize.min.css
crates/moon/js/: ReconnectingEventSource.min.js  ReconnectingEventSourceLicence  sse.js
crates/moon/src/: actor.rs  config.rs  error_handler.rs  from_env_vars.rs  frontend.rs  html.rs  lazy_message_writer.rs  lib copy.rs  lib.rs  not.rs  redirect.rs  sse.rs  up_msg_request.rs
crates/moon/src/actor/: index.rs  p_var.rs  sessions.rs
crates/moon/tests/fixtures/: index.css  index.css.br
crates/moon_entry_macros/: Cargo.toml
crates/moon_entry_macros/src/: lib.rs
crates/moonlight/: Cargo.toml
crates/moonlight/src/: auth_token.rs  cor_id.rs  date_time.rs  down_msg_transporter.rs  duration.rs  entity_id.rs  lib.rs  session_id.rs  wrapper.rs
crates/moonlight/src/wrapper/: datetime.rs  duration.rs
crates/mzoon/: Cargo.toml  build.rs
crates/mzoon/new_project/: Cargo.toml  Makefile.toml
crates/mzoon/new_project/backend/: Cargo.toml  favicon.html
crates/mzoon/new_project/frontend/: Cargo.toml
crates/mzoon/new_project/shared/: Cargo.toml
crates/mzoon/src/: backend.rs  backend_watcher.rs  build_backend.rs  build_frontend.rs  command.rs  config.rs  file_compressor.rs  frontend.rs  frontend_dist.rs  frontend_watcher.rs  helper.rs  main.rs  project_watcher.rs  run_backend.rs  set_env_vars.rs  wasm_bindgen.rs  wasm_opt.rs  wasm_pack.rs  watcher.rs
crates/mzoon/src/command/: build.rs  new.rs  start.rs
crates/mzoon/src/helper/: download.rs  file_compressor.rs  localhost_url.rs  read_to_vec.rs  tree_into_pairs.rs  try_into_string.rs  visit_files.rs  workspace_member.rs
crates/mzoon/src/watcher/: backend_watcher.rs  frontend_watcher.rs  project_watcher.rs
crates/route_macro/: Cargo.toml
crates/route_macro/src/: lib.rs
crates/zoon/: Cargo.toml
crates/zoon/src/: animation.rs  animation_frame.rs  app_event.rs  block_call_stack.rs  c_var.rs  c_var_map.rs  cache.rs  cache_map.rs  call_tree.rs  class_id.rs  clone_deep.rs  cmp_var.rs  cmp_var_map.rs  color.rs  component.rs  component_call_stack.rs  connection.rs  console.rs  cow_str.rs  css_color.rs  css_property.rs  css_property_name.rs  dom.rs  dom_builder_ext.rs  ease.rs  either.rs  el_var.rs  el_var_map.rs  element.rs  event_options.rs  events_extra.rs  fn_box_clone.rs  futures_signals_ext.rs  hook.rs  index_generator.rs  into_color.rs  into_f64.rs  l_var.rs  l_var_map.rs  lazy.rs  (+30 more)
crates/zoon/src/animation/: animation_loop.rs  ease.rs  interpolate.rs  oscillator.rs  timeline.rs  tweened.rs
crates/zoon/src/color/: color_space.rs  into_color.rs  oklch.rs  oklch_ext.rs  rgba.rs
crates/zoon/src/component/: button.rs  column.rs  el.rs  row.rs  text.rs
crates/zoon/src/connection/: sse.rs
crates/zoon/src/css_color/: color_space.rs  into_color.rs
crates/zoon/src/element/: ability.rs  button copy 2.rs  button copy.rs  button.rs  canvas.rs  checkbox.rs  column.rs  el.rs  focusable.rs  grid.rs  image.rs  label.rs  link.rs  paragraph.rs  raw_el.rs  raw_el_or_text.rs  raw_text.rs  row.rs  spacer.rs  stack.rs  stripe.rs  styleable.rs  text.rs  text_area.rs  text_input.rs
crates/zoon/src/futures_signals_ext/: signal_ext_bool.rs  signal_ext_ext.rs  signal_ext_option.rs
crates/zoon/src/router/: route_segment.rs
crates/zoon/src/routing/: from_route_segments.rs  route_segment.rs  router.rs
crates/zoon/src/style/: align.rs  align_content.rs  background.rs  borders.rs  clip.rs  color.rs  cursor.rs  font.rs  gap.rs  height.rs  hsl_uv.rs  layer_index.rs  named_color.rs  outline.rs  padding.rs  resizable.rs  rounded_corners.rs  scrollbars.rs  shadows.rs  snap_align.rs  snap_items.rs  spacing.rs  transform.rs  transitions.rs  visible.rs  width.rs
crates/zoon/src/task/: worker_script.js
examples/alignment/frontend/: Cargo.toml
examples/alignment/frontend/pkg/: build_id  frontend_126857573503903087061884011377941444626.js  frontend_bg_126857573503903087061884011377941444626.wasm
examples/alignment/frontend/src/: lib.rs
examples/boon_lang/: Cargo.toml  MoonZoon.toml  README.md
examples/boon_lang/backend/src/: main.rs  style.css
examples/boon_lang/frontend/: Cargo.toml
examples/boon_lang/frontend/src/: boon.rs  code_editor.rs  example_interval.rs  example_simple_counter.rs  (+4 more)
examples/canvas/backend/: Cargo.toml
examples/canvas/frontend/: Cargo.toml
examples/chat/frontend/: Cargo.toml  main.rs  markup.pest
examples/chat/shared/: Cargo.toml
examples/counter/frontend/: Cargo.toml
examples/counters/frontend/: Cargo.toml
examples/custom_config/frontend/: Cargo.toml
examples/custom_config/shared/: Cargo.toml
examples/custom_http_client/backend/: Cargo.toml
examples/custom_http_client/frontend/: Cargo.toml
examples/golem_chat/backend/: Cargo.toml
examples/svg/: Cargo.toml  Makefile.toml  MoonZoon.toml  README.md
examples/svg/backend/: Cargo.toml
examples/svg/frontend/: Cargo.toml
examples/timer/: Cargo.toml  README.md  main.rs
examples/timer/backend/: Cargo.toml
examples/timer/frontend/: Cargo.toml
examples/timer/shared/: Cargo.toml
examples/web_workers/: .gitignore  Cargo.toml  MoonZoon.toml
examples/web_workers/frontend/: Cargo.toml
(+804 files in other folders)
