[package]
name = "bean"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.68"
topo = "0.13.0"
illicit = "1.1.1"
slotmap = "0.4.0"
console_error_panic_hook = "0.1.6"
anymap = "0.12.1"

[dependencies.web-sys]
version = "0.3.45"
features = [
    "Document",
    "Element",
    "Node",
    "NodeList",
    "Text",
    "Window",
]
