[package]
name = "color_macro"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", default-features = false }
syn = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
cssparser-color = { version = "0.1.0", default-features = false }
cssparser = { version = "0.33.0", default-features = false }
