[package]
name = "hsluv"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2021"

[dependencies]
rust_hsluv = { version = "0.1.4", default-features = false, package = "rust-hsluv" }
hsluv_macro = { path = "../hsluv_macro", default-features = false, optional = true }
palette = { version = "0.7.4", features = ["std"], default-features = false }

[features]
default = ["hsluv_macro"]
