[package]
name = "moon"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "fs"], default-features = false }
tokio-stream = { version = "0.1.3", default-features = false }
futures = { version = "0.3.13", default-features = false }
uuid = { version = "0.8", features = ["v4"], default-features = false }
mime = { version = "0.3.16", default-features = false }
mime_guess = { version = "2.0.3", default-features = false }

# exact versions to prevent "random" compilation fails 
# caused by breaking changes in Actix libs
actix-web = { version = "=4.0.1", features = ["rustls", "macros"], default-features = false }
actix-files = { version = "=0.6.0", default-features = false }
actix-http = { version = "=3.0.1", default-features = false }
actix-cors = { version = "=0.6.0", default-features = false }
actix-tls = { version = "=3.0.3", default-features = false }
actix-rt = { version = "=2.6.0", default-features = false }
actix-router = { version = "=0.5.0", default-features = false }
rustls = { version = "=0.20.4", default-features = false }
rustls-pemfile = { version = "=0.3.0", default-features = false }

trait-set = { version = "0.2.0", default-features = false }
envy = { version = "0.4.2", default-features = false }
serde = { version = "1.0.130", features = ["std", "derive"], default-features = false, optional = true }
serde-lite = { version = "0.1.1", features = ["derive"], default-features = false, optional = true }
parking_lot = { version = "0.11.1", default-features = false }
env_logger = {version = "0.8.3", features = ["termcolor", "atty", "humantime"], default-features = false }
log = { version = "0.4.14", features = ["serde"], default-features = false }
bool_ext = { version = "0.5.1", default-features = false }
enclose = { version = "1.1.8", default-features = false }
apply = { version = "0.3.0", default-features = false }
once_cell = { version = "1.8.0", features = ["std"], default-features = false }
chashmap = { version = "2.2.2", default-features = false }
async-trait = { version = "0.1.51", default-features = false }
local-ip-address = { version = "0.4.4", default-features = false }

moonlight = { path = "../moonlight", features = ["backend"] }
moon_entry_macros = { path = "../moon_entry_macros", default_features = false }

[dev-dependencies]
const_format = { version = "0.2.14", default-features = false }

[features]
default = ["serde"]
