[package]
name = "moon_entry_macros"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0", default-features = false }

[dev-dependencies]
moon = {path = "../moon"}
actix-web = { version = "=4.0.0-beta.10", features = ["rustls"], default-features = false }