[package]
name = "moonlight"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2018"

[dependencies]
serde_json = { version = "1.0.64", features = ['std'], default-features = false }
rusty_ulid = { version = "0.10.1", features = ["ulid-generation"], default-features = false }
serde-lite = { version = "0.1.1", features = ["derive"], default-features = false, optional = true }
serde = { version = "1.0.130", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"], default-features = false, optional = true }
chrono = { version = "0.4", default-features = false, optional = true }

[features]
# default = ["serde_with_serde"]
# serde_with_serde = ["serde", "chrono/serde", "rusty_ulid/serde"]
frontend = ["getrandom", "chrono/wasmbind", "chrono/serde", "rusty_ulid/serde", "serde/derive"]
backend = ["chrono/std", "chrono/serde", "rusty_ulid/serde", "serde/derive"]

