[package]
name = "route_macro"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# @TODO migrate to the latest version (applies to all macros)
syn = { version = "1.0", features = ["full"], default-features = false }
quote = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0.66", default-features = false }
urlencoding = { version = "2.1.0", default-features = false }
