[workspace]
members = [
    "frontend",
    "backend",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MoonZoon/MoonZoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Timer - MoonZoon example"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"

[workspace.dependencies]
moon = { path = "../../crates/moon" }
zoon = { path = "../../crates/zoon" }
