[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/MoonZoon/MoonZoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Alignment - MoonZoon example"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
zoon = { path = "../../../crates/zoon" }
strum = { version = "0.24.0", default-features = false, features = ["derive"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
