[package]
name = "frontend"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
# boon = { path = "../../../../boon" }
boon = { git = "https://github.com/BoonLang/boon", rev = "30fa3c9604214f4eb8db7385fdaf80d64da8317e" }
