[package]
version = "0.1.0"
name = "backend"
repository = "https://github.com/MoonZoon/MoonZoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Canvas - MoonZoon example"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2018"

[dependencies]
# moon = { git = "https://github.com/MoonZoon/MoonZoon" }
moon = { path = "../../../crates/moon" }
