[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/MoonZoon/MoonZoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Chat - MoonZoon example"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2021"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
zoon = { path = "../../../crates/zoon" }
shared = { path = "../shared", features = ["frontend"] }
pest = { version = "2.1.3", default-features = false }
pest_derive = { version = "2.1.0", default-features = false }

