[package]
name = "frontend"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
zoon.workspace = true
shared = { path = "../shared", features = ["frontend"] }
# @TODO `pest/pest_derive` 2.2.1 fails with "could not find `alloc` in the list of imported crates"
pest = { version = "=2.1.3", default-features = false }
pest_derive = { version = "=2.1.0", default-features = false }

