[package]
version = "0.1.0"
name = "shared"
repository = "https://github.com/MoonZoon/MoonZoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Chat - MoonZoon example"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2018"

[dependencies]
serde-lite = { version = "0.1.1", features = ["derive"], default-features = false }
