[package]
version = "0.1.0"
name = "shared"
repository = "https://github.com/MoonZoon/MoonZoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Chat - MoonZoon example"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2018"

[dependencies]
serde-lite = { version = "0.1.1", features = ["derive"], default-features = false }
rusty_ulid = { version = "0.10.1", default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false, optional = true }

[features]
frontend = ["getrandom", "rusty_ulid/ulid-generation"]
backend = []
