[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/MoonZoon/MoonZoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Counters - MoonZoon example"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.23"

[dependencies]
# zoon = { git = "https://github.com/MoonZoon/MoonZoon" }
zoon = { path = "../../../crates/zoon" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
