[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/MoonZoon/MoonZoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Counters - MoonZoon example"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2021"


[dev-dependencies]
wasm-bindgen-test = "0.3.23"

[dependencies]
zoon = { path = "../../../crates/zoon" }

