[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/MoonZoon/MoonZoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Custom Config - MoonZoon example"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2021"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
zoon = { path = "../../../crates/zoon" }
shared = { path = "../shared", features = ["frontend"] }

