[package]
name = "shared"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
moonlight.workspace = true

[features]
frontend = ["moonlight/frontend"]
backend = ["moonlight/backend"]
