[package]
name = "backend"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
moon.workspace = true
reqwest = { version = "0.11.8", features = ["rustls-tls", "json"], default_features = false }
